--- a/index.html
+++ b/index.html
@@ -92,14 +92,13 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="https://github.com/SnehaSridharan/Portfolio-Projects/blob/main/Data-cleaning-nashville-housing/Data-cleaning-nashville-housing.sql">Data Cleaning<br />
+										in SQL</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/SnehaSridharan/Portfolio-Projects/blob/main/Data-cleaning-nashville-housing/Data-cleaning-nashville-housing.sql" class="image fit"><img src="images/nashville-housing.jpg" alt="" /></a>
+									<p>In this project we take raw housing data and transform it in SQL Server to make it more usable for analysis..</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/SnehaSridharan/Portfolio-Projects/blob/main/Data-cleaning-nashville-housing/Data-cleaning-nashville-housing.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
