--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 										in SQL</a></h2>
 									</header>
 									<a href="https://github.com/SnehaSridharan/Portfolio-Projects/blob/main/Data-cleaning-nashville-housing/Data-cleaning-nashville-housing.sql" class="image fit"><img src="images/nashville-housing.jpg" alt="" /></a>
-									<p>In this project we take raw housing data and transform it in SQL Server to make it more usable for analysis..</p>
+									<p>In this project we take raw housing data and transform it in SQL Server to make it more usable for analysis.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/SnehaSridharan/Portfolio-Projects/blob/main/Data-cleaning-nashville-housing/Data-cleaning-nashville-housing.sql" class="button">View Project</a></li>
 									</ul>
