--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										Dashboards</a></h2>
 									</header>
 									<a href="https://public.tableau.com/profile/sneha.sridharan#!/" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
-									<p>Tableau Dashboards for projects on COVID 19, ...</p>
+									<p>Tableau Dashboards for projects on COVID 19, Effects of Covid-19 on trade in New Zealand.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/profile/sneha.sridharan#!/" class="button">View Dashboards</a></li>
 									</ul>
