--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Sneha Sridharan<br /></h1>
 						<h3>Portfolio</h3>
-						<p>Data Analyst well versed in SQL, Python, Tableau, Power BI<br /> <a href="https://www.linkedin.com/in/sneha-sridharan-2277aa182/">@SnehaSridharan</a> 
+						<p>M. Sc. Software Systems major who has a keen interest in problem solving and well versed in SQL, Python, Tableau, Power BI<br /> <a href="https://www.linkedin.com/in/sneha-sridharan-2277aa182/">@SnehaSridharan</a> 
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
